[gd_scene load_steps=6 format=3 uid="uid://dwi4b5drb1k68"]

[ext_resource type="Script" path="res://start.gd" id="1_u50ag"]
[ext_resource type="AudioStream" uid="uid://cytdi1o4e6gjl" path="res://audio/button.wav" id="2_ku1jy"]
[ext_resource type="Texture2D" uid="uid://cws123jb6h1ng" path="res://art/pong.png" id="3_hd02a"]
[ext_resource type="Texture2D" uid="uid://clpky8y87bjo6" path="res://art/1player.png" id="4_7sk3s"]
[ext_resource type="Texture2D" uid="uid://de3h108dr5g8d" path="res://art/2player.png" id="5_lnu0e"]

[node name="Start" type="Node2D"]
script = ExtResource("1_u50ag")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -22.0
offset_top = -25.0
offset_right = 1409.0
offset_bottom = 844.0
color = Color(0, 0, 0, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ku1jy")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1158.0
offset_bottom = 646.0

[node name="Control" type="Control" parent="UI"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.441
anchor_right = 0.5
anchor_bottom = 0.441
offset_left = -579.0
offset_top = -286.886
offset_right = 579.0
offset_bottom = 363.114
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="UI/Control"]
position = Vector2(580, 284)
scale = Vector2(10, 10)
texture = ExtResource("3_hd02a")

[node name="1Player" type="TextureButton" parent="UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = 8.0
offset_right = -35.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_7sk3s")
stretch_mode = 0

[node name="2Player" type="TextureButton" parent="UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 38.0
offset_top = 8.0
offset_right = 191.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_lnu0e")
stretch_mode = 0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="UI/1Player" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/2Player" to="." method="_on_player_pressed"]
